--- a/src/app/pokemons/pokemons.component.html
+++ b/src/app/pokemons/pokemons.component.html
@@ -1,24 +1,22 @@
 
 <br>
 <br>
-<h2>{{countPokemon}} pokémons en base de données : </h2>
+<h2>{{pokemons.length}} pokémons en base de données : </h2>
 <div class="pokemon-list">
+  
     @for (pokemon of pokemons; track $index) {
-    <div class="pokemon-card">
-      <div class="pokemon-name">{{ pokemon.name }}</div>
-      <div class="pokemon-description">Catégorie : {{ pokemon.categorie }}</div>
+      <div class="pokemon-card">
+      <div class="pokemon-name">{{ pokemon.name | titlecase}}</div>
       <div class="pokemon-description">Type : 
-        @for (type of pokemon.types; track $index; let last = $last) {
-          @if (!last) {
-            {{ type  + "."}}
-          }@else {
-            {{ type}}
-          }
+        @for (type of pokemon.details.types; track $index;) {
+            {{ type.type.name  + "." | titlecase}}
         }
       </div>
-      <div class="pokemon-info">Taille : {{ formatNombre(pokemon.taille) }} m</div>
-      <div class="pokemon-info">Poids : {{ formatNombre(pokemon.poids) }} kg</div>
+      <div class="pokemon-info">Taille : {{ formatNombre(pokemon.details.height) }} m</div>
+      <div class="pokemon-info">Poids : {{ formatNombre(pokemon.details.weight) }} kg</div>  
     </div>
-    }
-  </div>
+      
+    }   
+</div>
+ 
   
